k8s/manifests-246fa9/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-246fa9
  namespace: journee
  labels:
    app: journee-246fa9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-246fa9
  template:
    metadata:
      labels:
        app: journee-246fa9
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-246fa9
          image: gcr.io/my-docker-471807/journee:246fa9-3f6501
          ports:
            - containerPort: 3000
