k8s/manifests-246fa9/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-246fa9
  namespace: journee
spec:
  selector:
    app: journee-246fa9
  ports:
    - port: 80
      targetPort: 3000
